--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".WifiDirectBroadcastReceiver" />
+        <receiver android:name=".Networking.WifiDirectBroadcastReceiver" />
     </application>
 
 </manifest>
