--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'commons-io:commons-io:2.10.0'
+    implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'com.googlecode.json-simple:json-simple:1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'androidx.appcompat:appcompat:1.3.0'
