--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnoApp">
-        <activity android:name=".ServerBrowsing"></activity>
-        <activity android:name=".PlaceholderActivity" />
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".GameActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ServerBrowsing"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
