--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".GameActivity" />
         <activity
-            android:name=".ServerBrowsing"
+            android:name=".ServerBrowsingActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
