--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UnoApp">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".TipsActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".GameActivity" />
         <activity
             android:name=".ServerBrowsingActivity"
